<resources>
    <string name="app_name">Notika</string>
    <string name="sample">Simple Image</string>
    <string name="hello">Hello Students</string>
    <string name="display">Display</string>

    <string name="signup">Sign Up</string>
    <string name="explore">Explore</string>
    <string name="title">notika</string>
    <string name="normal">Sign In with your Notika Account</string>
    <string name="normal_night">Use night mode</string>
    <string name="normal_night_subtitle">Remove whiteness from the screen</string>
    <string name="download_normal">Download settings</string>
    <string name="download_normal_automatically">Download Automatically</string>
    <string name="download_normal_automatically_subtitle">Bookmarks will automatically download when you add them</string>
    <string name="download_normal_wifi">Download over WI-FI</string>
    <string name="download_normal_wifi_subtitle">Downloads will occur if you are connected to Wi-Fi</string>
    <string name="more_normal">More</string>
    <string name="about">About</string>
    <string name="share">Share the app</string>

    <string name="user">Username</string>

    <string name="topicString">Topics you read will appear here</string>
    <string name="downloadString">Your downloads will appear here</string>

    <string name="N">N</string>
    <string name="O">O</string>
    <string name="n">n</string>
    <string name="o">o</string>
    <string name="t">t</string>
    <string name="T">T</string>
    <string name="i">i</string>
    <string name="I">I</string>
    <string name="K">K</string>
    <string name="k">k</string>
    <string name="A">A</string>
    <string name="a">a</string>

    <string name="Explore">Explore</string>
    <string name="edit">Edit Profile</string>
    <string name="save">Save Account Settings</string>
    <string name="topic">Topics</string>
    <string name="Profile">Profile</string>
    <string name="signUpPasswordHint">Password</string>
    <string name="signUpEmailHint">Email</string>
    <string name="signUpPasswordHint1">Retype Password</string>
    <string name="or">OR</string>
    <string name="or1">Sign Up with</string>
    <string name="g">G</string>
    <string name="f">f</string>
    <string name="already">Already have an account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="or2">Sign In with</string>
    <string name="already2" />
    <string name="already3">Don\'t have an account ?</string>
    <string name="settings">settings</string>
    <string name="downloads">Downloads</string>
    <string name="uploads">Uploads</string>
    <string name="courses">Courses</string>
    <string name="account">Account</string>
    <string name="payments">Payments</string>
    <string name="history">History</string>
    <string name="learn">Learn at ease</string>
    <string name="any">Anywhere, Anytime.</string>
    <string name="explore_tab">Explore</string>
    <string name="catalogue_tab">Catalogue</string>
    <string name="download_tab">Downloads</string>
    <string name="learn2">What do you want to learn?</string>
    <string name="filter">FILTER</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="signout">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google">Continue with google</string>
    <string name="todo">TODO</string>
    <string name="popular">Popular topics</string>
    <string name="featured">Featured topics</string>
    <string name="recent">Recent Added</string>

    <string-array name="topics">
        <item>Arts and Humanities</item>
        <item>Design</item>
        <item>Development</item>
        <item>Finance and Accounting</item>
        <item>Mathematics</item>
        <item>Engineering Physics</item>
        <item>Science</item>
        <item>Basic Computing</item>
        <item>Networking</item>
        <item>IT Solutions</item>
    </string-array>

    <string-array name="topic_title">
        <item>Calculus I - Differentiation</item>
        <item>Complex numbers</item>
        <item>Newton laws of physics</item>
        <item>Electromagnetic Induction</item>
        <item>Trigonometric Functions</item>
    </string-array>
    <string-array name="topic_description">
        <item>Advanced Level - Form VI</item>
        <item>Advanced Level - Form VI</item>
        <item>O level - Form II</item>
        <item>Advanced level - Form VI</item>
        <item>Advanced Level - Form VI</item>
    </string-array>
    <string name="title_activity_app_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>
